@@ -12,6 +12,7 @@
 			<td>
 				<br>
 				<a class="btnstyle3" onclick="SaveUserDevices();" data-i18n="Save">Save</a>
+				<a class="btn btn-danger" onclick="ClearUserDevices();" data-i18n="Clear">Clear</a>
 			</td>
 		</tr>
 	</table>
